--- a/chayeowon/index.html
+++ b/chayeowon/index.html
@@ -1,50 +1,41 @@
 <!DOCTYPE html>
-	<html lang="ko">
+	<html lang="kd">
 		<head>
-			<title>html 요소</title>
+			<title>글자, 이미지, 색, 형태</title>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meat name="keywords" content="">
 			<meat name="description" contene="">
 			<link rel="stylesheet" href="style.css">
-			</head>
-			<body>
-    <header>
+		</head>
+	<body>
+      <header>
+        <h1 class="b2">시간</h1>
+         <h2 class="b1">네 가지의 시간 중 원하는 시간을 골라주세요.</h2>
         <nav>
-            <ul>
-                <li><a href="q1.html">첫 번째 글자</a></li>
-                <li><a href="q2.html">두 번째 글자</a></li>
-                <li><a href="q3.html">세 번째 글자</a></li>
-                <li><a href="q4.html">네 번째 글자</a></li>
-                <li><a href="q5.html">다섯 번째 글자</a></li>
-                <li><a href="q6.html">여섯 번째 글자</a></li>
-                <li><a href="q7.html">일곱 번째 글자</a></li>
-                <li><a href="q8.html">여덟 번째 글자</a></li>
-                <li><a href="q9.html">아홉 번째 글자</a></li>
-                <li><a href="q10.html">열 번째 글자</a></li>
+            <ul class="b3">
+              <li class="c1">글-7:00</li>
+              <li class="c2">이미지-12:00</li>
+              <li class="c3">색-5:00</li>
+              <li class="c4">형태-9:00</li>
             </ul>
         </nav>
     </header>
-    <section class="w1">
+    <section>
+    <div class="clock">
+      <div class="hour-mark hour-1">1</div>
+      <div class="hour-mark hour-2">2</div>
+      <div class="hour-mark hour-3">3</div>
+      <div class="hour-mark hour-4">4</div>
+      <a href="cl/clor.html"><div class="hour-mark hour-5">5</div></a>
+      <a href="fo/form.html"><div class="hour-mark hour-6">9</div></a>
+      <a href="te/text.html"><div class="hour-mark hour-7">7</div></a>
+      <div class="hour-mark hour-8">8</div>
+      <div class="hour-mark hour-9">9</div>
+      <div class="hour-mark hour-10">10</div>
+      <div class="hour-mark hour-11">11</div>
+      <a href="im/img.html"><div class="hour-mark hour-12">12</div></a>
+    </div>
     </section>
-    <section class="w2">
-        <h1>글자</h1>
-        <div class="w3">
-            <img src="img/cafe.png" alt="타이포그래피" width=200px, height=40px>
-            <img src="img/plate.png" alt="타이포그래피" width=200px, height=50px>
-            <img src="img/qwer.png" alt="타이포그래피" width=200px, height=50px>
-            <img src="img/asdf.png" alt="타이포그래피" width=200px, height=50px>
-            <img src="img/zxc.png" alt="타이포그래피" width=100px, height=60px>
-            <img src="img/lkj.png" alt="타이포그래피" width=100px, height=60px>
-            <img src="img/mnb.png" alt="타이포그래피" width=200px, height=90px>
-            <img src="img/yhb.png" alt="타이포그래피" width=200px, height=90px>
-            <img src="img/rdx.png" alt="타이포그래피" width=200px, height=90px>
-            <img src="img/ygv.png" alt="타이포그래피" width=200px, height=90px>
-            <h2>관심 깊게 본 글자를 볼 수 있습니다.</h2>
-        </div>
-    </section>
-    <footer>
-        <p>&copy; 2024 letter. chayeowon.</p>
-    </footer>
 </body>
-</html>
+	</html>
