--- a/clor.html
+++ b/clor.html
@@ -6,7 +6,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meat name="keywords" content="">
 			<meat name="description" contene="">
-			<link rel="stylesheet" href="style.css">
+			<link rel="stylesheet" href="style3.css">
 			</head>
 		<body>
 		    <div class="night-sky">
